--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,173 @@
+:root {
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --accent-color: #2196f3;
+  --primary-white-color: #ffffff;
+}
 body {
-  background-color: #F5F5F5;
-  font-family: 'Roboto';
+  background-color: #f5f5f5;
+  font-family: roboto;
+  letter-spacing: 0.03em;
+  font-style: normal;
+  color: var(--title-text-color);
+}
+/* header */
+.header {
+  background-color: #ffffff;
+}
+.header-logo {
+  color: var(--title-text-color);
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  text-decoration: none;
+}
+.logo {
+  color: var(--accent-color);
+}
+.nav-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  text-decoration: none;
+}
+.nav-link.portfolio {
+  color: var(--accent-color);
+}
+.nav-link.studio {
+  color: var(--accent-color);
+}
+.header-link {
+  color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+.header-link:hover,
+.header-link:focus {
+  color: var(--accent-color);
+}
+/* footer */
+.footer {
+  background-color: #2f303a;
+}
+.header-logo.footer {
+  color: var(--primary-white-color);
+}
+.footer-link {
+  color: var(--primary-text-color);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  text-decoration: none;
+}
+.footer-link.adress {
+  color: var(--primary-white-color);
 }
 
-:root {
-  --primary-text-color: rgba(0, 0, 0, 0.8);
-  --title-text-color: #000000;
-  --accent-color: #18a0fb;
-  --primary-whine-color: rgba(33, 33, 33, 1)
+
+
+/* Porfolio */
+.button:hover,
+.button:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
 }
-h2 {
-    color: var(--primary-whine-color)
-} 
+/* Кнопки */
+.button {
+  cursor: pointer;
+  border: 0px;
+  background-color: #f5f4fa;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+}
+.title,
+.item-title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+.item-text {
+  color: var(--primary-text-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.9;
+}
+.item-link {
+  text-decoration: none;
+}
+.list-item,
+.nav-item,
+.header-item,
+.footer-item {
+  list-style: none;
+}
+
+/* Studio */
+.order {
+  background-color: #2F303A;
+}
+.order-title {
+  font-weight: 900;
+font-size: 44px;
+line-height: 1.3;
+text-align: center;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+color: var(--primary-white-color);
+}
+.order-button:hover,
+.order-button:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color)
+}
+.order-button {
+cursor: pointer;
+}
+/* peculiarities  */
+.peculiarities-text {
+  color: var(--primary-text-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+}
+.peculiarities-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  text-transform: uppercase;
+}
+.work-title,
+.team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1;
+  text-align: center;
+}
+.team-item-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+}
+.team-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  color: var(--primary-text-color);
+}
+.team-section {
+  background-color: #F5F4FA;
+
+}
