--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,11 @@
 }
 body {
   background-color: #f5f5f5;
-  font-family: roboto;
+  font-family: 'roboto', sans-serif;
   letter-spacing: 0.03em;
-  font-style: normal;
   color: var(--title-text-color);
 }
-/* header */
+/*---------- header ----------*/
 .header {
   background-color: #ffffff;
 }
@@ -52,7 +51,7 @@ body {
 .header-link:focus {
   color: var(--accent-color);
 }
-/* footer */
+/*---------- footer ----------*/
 .footer {
   background-color: #2f303a;
 }
@@ -62,7 +61,6 @@ body {
 .footer-link {
   color: var(--primary-text-color);
   font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
   text-decoration: none;
@@ -71,16 +69,14 @@ body {
   color: var(--primary-white-color);
 }
 
-
-
-/* Porfolio */
+/*---------- Porfolio ----------*/
 .button:hover,
 .button:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
-/* Кнопки */
 .button {
+  font-family: 'roboto';
   cursor: pointer;
   border: 0px;
   background-color: #f5f4fa;
@@ -89,67 +85,70 @@ body {
   line-height: 1.6;
   text-align: center;
 }
-.title,
 .item-title {
   color: var(--title-text-color);
-  font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
 .item-text {
   color: var(--primary-text-color);
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.9;
 }
 .item-link {
   text-decoration: none;
 }
-.list-item,
-.nav-item,
-.header-item,
-.footer-item {
+.marker {
   list-style: none;
 }
 
-/* Studio */
+/*---------- Studio ----------*/
 .order {
-  background-color: #2F303A;
+  background-color: #2f303a;
 }
 .order-title {
   font-weight: 900;
-font-size: 44px;
-line-height: 1.3;
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-color: var(--primary-white-color);
-}
-.order-button:hover,
-.order-button:focus {
+  font-size: 44px;
+  line-height: 1.3;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
   color: var(--primary-white-color);
-  background-color: var(--accent-color)
 }
 .order-button {
-cursor: pointer;
+  font-family: 'roboto';
+  cursor: pointer;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
 }
-/* peculiarities  */
+
+/*---------- peculiarities  ----------*/
+.invisible-title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .peculiarities-text {
   color: var(--primary-text-color);
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
 }
 .peculiarities-title {
-  font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
   text-transform: uppercase;
 }
 .work-title,
 .team-title {
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.1;
   text-align: center;
@@ -161,13 +160,11 @@ cursor: pointer;
   text-align: center;
 }
 .team-text {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
   color: var(--primary-text-color);
 }
 .team-section {
-  background-color: #F5F4FA;
-
+  background-color: #f5f4fa;
 }
