--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,19 @@
   --title-text-color: #212121;
   --accent-color: #2196f3;
   --primary-white-color: #ffffff;
+  --bkg-color-footer-hero: #2f303a;
+  --studio-btn-accent-color: #188ce8;
+  --team-bkg-color: #f5f4fa;
 }
 body {
-  background-color: #f5f5f5;
+  background-color: var(--primary-white-color);
   font-family: 'roboto', sans-serif;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
 /*---------- header ----------*/
 .header {
-  background-color: #ffffff;
+  background-color: var(--primary-white-color);
 }
 .header-logo {
   color: var(--title-text-color);
@@ -33,6 +36,10 @@ body {
   color: var(--title-text-color);
   text-decoration: none;
 }
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--accent-color);
+}
 .nav-link.portfolio {
   color: var(--accent-color);
 }
@@ -47,13 +54,9 @@ body {
   letter-spacing: 0.02em;
   text-decoration: none;
 }
-.header-link:hover,
-.header-link:focus {
-  color: var(--accent-color);
-}
 /*---------- footer ----------*/
 .footer {
-  background-color: #2f303a;
+  background-color: var(--bkg-color-footer-hero);
 }
 .header-logo.footer {
   color: var(--primary-white-color);
@@ -68,6 +71,12 @@ body {
 .footer-link.adress {
   color: var(--primary-white-color);
 }
+.header-link:hover,
+.header-link:focus,
+.footer-link:hover,
+.footer-link:focus {
+  color: var(--accent-color);
+}
 
 /*---------- Porfolio ----------*/
 .button:hover,
@@ -75,11 +84,12 @@ body {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
+
 .button {
   font-family: 'roboto';
   cursor: pointer;
   border: 0px;
-  background-color: #f5f4fa;
+  background-color: var(--team-bkg-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
@@ -102,10 +112,13 @@ body {
 .marker {
   list-style: none;
 }
+.project-item {
+  background-color: var(--primary-white-color);
+}
 
 /*---------- Studio ----------*/
 .order {
-  background-color: #2f303a;
+  background-color: var(--bkg-color-footer-hero);
 }
 .order-title {
   font-weight: 900;
@@ -118,13 +131,19 @@ body {
 }
 .order-button {
   font-family: 'roboto';
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
   cursor: pointer;
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
-
+.order-button:hover,
+.order-button:focus {
+  background-color: var(--studio-btn-accent-color);
+}
 /*---------- peculiarities  ----------*/
-.invisible-title {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -166,5 +185,5 @@ body {
   color: var(--primary-text-color);
 }
 .team-section {
-  background-color: #f5f4fa;
+  background-color: var(--team-bkg-color);
 }
