--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,9 @@ body {
   line-height: 1.2;
   text-align: center;
 }
+.team-item {
+  background-color: var(--primary-white-color);
+}
 .team-text {
   font-size: 16px;
   line-height: 1.2;
